<resources>
    <string name="app_name">Lactapp</string>
    <string name="welcome_sentence">Welcome to Lactapp!</string>
    <string name="start">Start</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_data">Information</string>
    <string name="back">back</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_articles">Articles</string>
    <string name="change">change</string>
    <string name="dummy">dummy</string>
    <string name="more">more</string>
    <string name="title_activity_data">Data</string>
    <string name="faster">exercise more</string>
    <string name="maintain">maintain speed</string>
    <string name="slower">slow down</string>
</resources>
