<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.advicy.lactapp.views.fragment.HomeTrainFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_train" />
    <fragment
        android:id="@+id/navigation_data"
        android:name="com.advicy.lactapp.views.fragment.DataFragment"
        android:label="@string/title_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.advicy.lactapp.views.fragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>